<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeekAlarmZ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_time">00:00</string>
    <string name="vibrate">Vibrate</string>
    <string name="submit">Submit</string>
    <string name="question">What day is today ?</string>
    <string name="title_activity_alarm">AlarmActivity</string>

</resources>
